testdata/baselines/reference/submodule/conformance/checkJsxChildrenProperty16.errors.txt
checkJsxChildrenProperty16.tsx(5,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
checkJsxChildrenProperty16.tsx(14,44): error TS2503: Cannot find namespace 'JSX'.


==== checkJsxChildrenProperty16.tsx (2 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    // repro from #53493
    
    import React = require('react');
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    export type Props =
      | { renderNumber?: false; children: (arg: string) => void }
      | {
          renderNumber: true;
          children: (arg: number) => void;
        };
    
    export declare function Foo(props: Props): JSX.Element;
                                               ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    
    export const Test = () => {
      return (
        <>
          <Foo>{(value) => {}}</Foo>
          <Foo renderNumber>{(value) => {}}</Foo>
    
          <Foo children={(value) => {}} />
          <Foo renderNumber children={(value) => {}} />
        </>
      );
    };